# first_pipeline

./: CMakeLists.txt  Jenkinsfile  README.md  example.cpp  example.hpp
